2026电赛H题循迹小车/V9/直线测试说明.md
# V9 启停线确定性识别测试说明

## 按键功能

| 按键 | 功能 |
|---|---|
| PA18 | 循迹一圈，第二次检测到启停横线时立即停止计时并进入制动 |
| PB22 | A→B，进入B端圆弧后继续350mm；整车通过B点时停止计时，再走150mm后减速停车 |
| PB23 | 循迹一圈，第二次检测到启停横线后继续350mm；整车通过A点时停止计时，再走150mm后减速停车 |
| PB24 | 任意状态立即关闭电机并冻结计时 |

PA18按下为高电平；PB22、PB23、PB24按下为低电平。四个按键都在`empty.syscfg`中启用中断，并保留20ms软件消抖。

## 新起点与启停线

现在启动时灰度探头位于启停横线后方，车辆启动后会先经过一次与轨迹垂直的横线。该横线可能同时触发3～8个探头，这是正常现象。

程序处理顺序：

1. 按键启动，编码器和计时清零。
2. 在前500mm内遇到的第一次宽横线只记录为“一圈起始基准”。
3. 第一次横线不会触发停车、停止计时或任务完成。
4. 一圈里程从第一次横线开始计算，因此按键位置距离横线多远不会改变一圈终点。
5. 相对第一条横线行驶约4.2m后开放第二次横线的完成判断，避免编码器标定误差导致终点漏检。

终点横线判定：

- 3～8个黑色探头；
- 任意3个以上探头见黑，不要求三个探头必须相邻；
- 一个10ms控制周期即可确认；
- 在此前1秒内曾正常看到1～2个探头下的纵向轨迹。

如果启停线位于圆弧出口，车头尚未转正而总共只有两个探头见黑，程序使用第二套判据：

- 陀螺仪累计转角达到330°，或者一圈相对行程达到约6.0m；
- 两个黑色探头中至少有一个是最左或最右探头，支持同侧相邻双灯、左右最外侧各一灯以及最外侧加非相邻探头；
- 连续保持20ms；
- 该双灯判据不再要求“最近1秒见过非边缘普通线”。

V8曾把外侧双灯排除在普通线历史之外，却又要求终点必须有普通线历史。车辆在末段圆弧连续使用外侧探头循迹时，历史会清零，导致真实终点被否决；回到中间探头后历史恢复，但只能等下一圈再次检测，因此停车圈数不固定。V9删除了这一矛盾条件，并用累计转角限制双灯终点只能在一圈末段生效。

累计转角达到430°仍未识别启停线时，程序进入`FAULT`并停车，不会继续跑到两圈半。CCS调试时可观察：

```text
ABMission_getLapTurnCentiDeg()
GraySensor_getBlackMask()
GraySensor_getActiveCount()
```

最后一项用于排除DAT断线或持续全黑。如果起步时探头已经压在横线上，第一次横线不要求此前见到纵向轨迹，因为它只用于记录基准，不会完成任务。

## 车长和延后停车

车长按350mm处理。灰度探头检测到B/A参考点后，编码器继续累计：

```c
#define PASS_BODY_CLEAR_COUNT   (2496U)  /* 约350mm */
#define PASS_EXTRA_RUN_COUNT    (1069U)  /* 约150mm */
#define PASS_BRAKE_AFTER_COUNT  (3565U)  /* 总计约500mm */
#define PASS_HARD_STOP_COUNT    (4278U)  /* 总计约600mm保护 */
```

PB22和PB23的`TIME`在检测点后350mm冻结，此时车身已经完整通过B/A，但电机不会停。车辆再循迹约150mm后开始减速。实时速度用于根据`350mm ÷ 当前速度`计算通过车身所需时间的安全上限；正常完成仍以编码器实际距离为准，因此电池电压变化不会改变车长补偿。

## LCD状态

| 状态 | 含义 |
|---|---|
| `LAP NOW` | PA18一圈到线即停 |
| `AB RUN` | PB22 A→B运行 |
| `LAP PASS` | PB23一圈整车通过运行 |
| `AB SLOW` / `LAP SLOW` | 接近任务参考点 |
| `PASSING` | 已检测B/A，正在走满350mm车长 |
| `POST RUN` | 计时已冻结，继续循迹150mm |
| `DECEL` | 逐渐减小PWM |
| `COAST` / `BRAKE` | 零PWM等待和短时反向制动 |
| `DONE` | 正常完成 |
| `ABORT` | PB24急停 |
| `FAULT` | 堵转、横线漏检或安全超时 |

## 圆弧贴线检查

V8在连续30ms检测到外侧偏差后进入圆弧辅助：

- 圆弧基础PWM限制为165‰；
- 保留36‰同方向连续差速，不再等轨迹跑到最外侧才重新修正；
- 外侧PID微分系数从30降低到18，减小探头跳变造成的突然折线；
- 回到直线后出现持续50ms反向误差时自动退出圆弧辅助。

以210mm轮距估算，`基础PWM=165‰、左右差速=±36‰`对应的理想车体中心转弯半径约0.48m，接近赛道0.5m圆弧。实车仍以灰度PID纠正轮径差、电池电压和地面摩擦误差。

## 上电静态检查

1. 不接电机VM，只给MSPM0和TB6612逻辑供电。
2. 上电后PB14(STBY)、PB8(PWMA)、PB9(PWMB)应接近0V。
3. LCD应显示`IDLE`、`000.000 S`和`0000 MM/S`。
4. 按住PB24不会让电机启动。
5. 确认PB24接的是开发板PB24按钮，不是编码器PA24。

## 灰度方向检查

在CCS的`View -> Expressions`加入：

```text
GraySensor_getBlackMask()
GraySensor_getActiveCount()
GraySensor_getLineError()
```

正常纵向黑线通常触发1～2个探头。黑线位于车辆左侧时`lineError`应为正，位于右侧时应为负。如果相反，只修改：

```c
#define GRAY_BIT0_IS_LEFT (0)
```

不要通过交换电机或编码器线修复灰度方向。

## PA18测试：一圈到线立即停车

1. 固定钢球，手放在PB24附近。
2. 让探头位于启停线后方，车身朝A→B方向。
3. 按PA18，LCD显示`LAP NOW`。
4. 刚启动经过第一次横线时不能停车。
5. 小车完成一圈再次检测横线时，前进PWM应立即关闭，进入`COAST -> BRAKE -> DONE`。
6. `TIME`应在第二次横线被确认时冻结。

若刚启动就停车，检查第一次横线基准逻辑；若一圈后显示`FAULT`，记录第二次横线瞬间的`activeCount`和`blackMask`。

## PB22测试：A→B整车通过

1. 按PB22，LCD显示`AB RUN`。
2. 进入B端圆弧后，LCD显示`PASSING`。
3. 车辆继续沿圆弧循迹约350mm。
4. 整车通过B点时`TIME`冻结，LCD变为`POST RUN`，车辆不能立即停车。
5. 再沿圆弧行驶约150mm后显示`DECEL`并停车。

B点由“约1350mm后持续灰度偏离中心”的圆弧特征识别；若特征不明显，1500mm编码器距离作为备用B点。

## PB23测试：一圈整车通过

1. 按PB23，LCD显示`LAP PASS`。
2. 刚启动经过第一次横线时不能停车或冻结计时。
3. 完成一圈再次检测A点横线后显示`PASSING`。
4. 车辆沿A后的直线继续约350mm，整车通过A时`TIME`冻结并显示`POST RUN`。
5. 再沿直线行驶约150mm后减速停车。

## PB24急停测试

分别在PA18、PB22、PB23运行中按PB24：

- 电机应立即关闭；
- `TIME`立即冻结；
- LCD最终显示`ABORT`；
- 松开PB24后车辆不能自行恢复运行。

## STM32串口测试

1. MSPM0的`PB4(TX)`接STM32的串口RX，`PA9(RX)`接STM32的串口TX，两块板必须共地。
2. STM32串口设为`115200、8位数据、无校验、1位停止位`。
3. 不启动小车时也应每20ms收到一条`$T,...`遥测行。
4. 按任一启动按钮，应先收到`$E,ACCEL`和`$E,STRAIGHT`。
5. 小车进入圆弧并保持约80ms后，应收到`$E,CURVE`。
6. 从圆弧回到直线并保持约150ms后，应收到`$E,STRAIGHT`。
7. 程序降低目标速度时，应收到`$E,DECEL`。

如果STM32收到乱码，优先检查双方波特率、共地和TX/RX交叉接线；不要把PB4直接接到STM32的TX。

## 可调参数

如果350mm不足以让车尾完全通过B/A，应先确认灰度探头是否位于车头最前端。当前使用完整车长350mm作为保守补偿。每1mm理论约7.13个编码器计数：

```text
增加10mm约增加71计数
增加20mm约增加143计数
```

“计时冻结后继续行驶”的距离由`PASS_EXTRA_RUN_COUNT`控制，默认150mm。第一次实车调节每次只改变约70计数（10mm），不要同时修改车长、PWM和制动时间。
